<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ac.titech.itpro.sdl.expensesmemo.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:minHeight="24dp">
                <TextView android:text="@string/place_name" android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView android:text="@string/datetime" android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView android:text="@string/item_name" android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView android:text="@string/item_price" android:textAppearance="?android:attr/textAppearanceMedium"/>
                <TextView android:text="@string/item_sync" android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/item_add"
        android:text="@string/new_item_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
